[project]
name = "qlaze-core"
version = "0.9.0"
description = "Reference implementation of QLAZE (EP-HS, AuthBind, ZTARP DPR)"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/akramIOT/qlaze-core"
Repository = "https://github.com/akramIOT/qlaze-core"
dependencies = [
  "cryptography>=42.0.0",
  "kyber-py>=1.2.0",
  "dilithium-py>=1.4.0",
]

[project.scripts]
qlaze-bench = "qlaze.bench:main"

[tool.setuptools.packages.find]
where = ["src"]
